Fixed z-indexing conflict between process headline and home image link

--- a/src/stylesheets/screen.sass
+++ b/src/stylesheets/screen.sass
@@ -1,5 +1,3 @@
-// Test
-
 @import compass
 @import fonts
 @import global_reset
@@ -55,7 +53,10 @@ a
   
 .header 
   width: $lwidth
-  
+  img
+    position: relative
+    z-index: 2
+
 .nav
   +fr
   ul
@@ -167,7 +168,7 @@ h1.home_headline
   text-align: center
   
 h1.process_headline
-  pointer-events: none
+  z-index: 1
   line-height: inherit
   position: relative
   margin: 0 auto -40px auto
